# rinha-2026-rust

./: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  info.json
.cargo/: config.toml
crates/api/: Cargo.toml
crates/api/src/: forest.rs  main.rs  models.rs  search.rs  vectorize.rs
crates/preprocess/: Cargo.toml
crates/preprocess/src/: main.rs
docs/adr/: ADR-001-stack-tecnico.md  ADR-001-uint8-manhattan-threading.md  ADR-002-ivf-flat-simd.md  ADR-003-armazenamento-f16.md  ADR-004-pipeline-build.md  ADR-005-budget-memoria.md
haproxy/: haproxy.cfg
nginx/: nginx.conf
resources/: model-tree.json
