[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
half = "2"
anyhow = "1"
core_affinity = "0.8"
